# tcc_poc3

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  docker-compose.yaml  docker.env  inters.py  local.env  pyproject.toml  requirements.txt  simple.py  zama.py  zama2.py
SEAL-Python/: Dockerfile
docker/: duckdb.Dockerfile  postgres.Dockerfile  worker.Dockerfile
docker/SEAL-Python/: Dockerfile
evento/logger/: colors.py
postgres/cert_login/: generate_user_cert.sh
postgres/scripts/: adequate.sql  auditing.sh  constraints.sql  generate_ids.sql  pii.sql
postgres/scripts/init/: extensions.sql  rbac.sql
postgres/tls/: generate_cert.sh  postgres_conf.sh
simple-fhe/: __init__.py
simplefhe/: datatypes.py
universidade/: encrypt_data.py  fhe_keygen.py  generate_data.py  generate_reports.py  ingest_data.py  load_data.py  transform_data.py
universidade/libs/: __init__.py
universidade/libs/crypto/: crypto.py
universidade/libs/hashing/: hashing.py
universidade/libs/simplefhe/: __init__.py  datatypes.py  decryptors.py  encryptors.py
universidade/libs/tokenize/: token.py
universidade/libs/tokens/: tokens.py
universidade/logger/: log.py
universidade/models/: BaseModel.py  __init__.py
universidade/models/discentes/: Discente.py
universidade/models/disciplinas/: Disciplina.py  __init__.py
universidade/models/docentes/: Docente.py  __init__.py
universidade/models/matriculadisciplinas/: MatriculaDisciplina.py
universidade/transform/: __init__.py
universidade/utils/: __init__.py
