[tool.poetry]
name = "tcc-poc3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.2.0"
cffi = "^1.17.1"
cryptography = "^43.0.3"
duckdb = "^1.1.3"
faker = "^33.0.0"
psycopg2-binary = "^2.9.10"
py4j = "^0.10.9.7"
pycparser = "^2.22"
python-dateutil = "^2.9.0.post0"
regex = "^2024.11.6"
six = "^1.16.0"
tqdm = "^4.67.0"
ff3 = "^1.0.2"
poetry-plugin-export = "^1.8.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
